--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    This is html entry page
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <p>This is html entry page</p>
+    <p>This is html entry page2</p>
+  </body>
 </html>
