--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <p>This is html entry page</p>
     <p>This is html entry page2</p>
+    <img src="./image.jpg" alt="">
+    <img src="https://www.linearity.io/blog/content/images/2023/06/how-to-create-a-car-NewBlogCover.png" alt="">
   </body>
 </html>
